# maximal-empty-spheres

./: .gitmodules  3D Contouring.ipynb  README.md  contouring_comparison.ipynb  contouring_example.ipynb  lie_cone.py
cgal/: CMakeLists.txt  EmptySpheresReconstruction.py  Readme.md  empty_spheres_reconstruction_3.cpp
utils/: data.py  mesh_distances.py
